# flourish

./: .gitignore  COPYING  INSTALL  Makefile.am  Makefile.common  README  autogen.sh  configure.ac  dwarf.yog  flourish.yog  index.html  install-sh  missing  sugar.yog
data/: COPYING  Makefile.am  ceil_large.xcf  external.xcf  floor.xcf  goal-floor.xcf  goal-pass.xcf  mouse_area.xcf  pc.xcf  switch-pressed.xcf  switch-released.xcf  wall.xcf
data/pc/: Makefile.am  attack0.xcf  attack1.xcf  attack2.xcf  attack3.xcf  turn_left.xcf  turn_right.xcf  walk0.xcf  walk1.xcf  walk2.xcf  walk3.xcf  walk4.xcf  walk5.xcf  walk6.xcf  walk7.xcf
data/slime/: Makefile.am  attack0.xcf  attack1.xcf  attack2.xcf  attack3.xcf  attack4.xcf  attack5.xcf  attack6.xcf  attack7.xcf  attack8.xcf  walk0.xcf  walk1.xcf  walk2.xcf  walk3.xcf  walk4.xcf
data/stone/: Makefile.am  roll-horizontally0.xcf  roll-horizontally1.xcf  roll-horizontally2.xcf  roll-horizontally3.xcf  roll-horizontally4.xcf  roll-vertically3.xcf  roll-vertically4.xcf  walk1.xcf  walk2.xcf
doc/: Makefile.am  attack.ogv  index.html  stone.ogv
doc/images/: Makefile.am  how_to_move.xcf
doc/thumbnails/: Makefile.am
images/: Makefile  Makefile.in
issues/: issue-08c47aaf73dc4bdd0b3304f7cfd1d0ab3783fb5e.yaml  issue-0b699de12426026c319db59eb10a30d0b342ced7.yaml  issue-164c1a029f8dbb63951fe99717e17b5e710dbf31.yaml  issue-278c3bef64ff083311ce49f56f66b4cecbfed02b.yaml  issue-3cc19fad34ebaec731157e48f2ddce24d1b019e7.yaml  issue-40a6c63c3f24205487de96ebd05dd63fc24e23f6.yaml  issue-4fc353aaa6bf1c191beb2a16e1701cca7e850e67.yaml  issue-5544b33ef54eadd6040a7d2f61038f6bd06245ea.yaml  issue-5df8518a33b2ada03948ca9f9f3fd2844a089606.yaml  issue-67206de74fd44e4294bf1d1661318f56a5cac3f2.yaml  issue-7279226d6e54e17d41a8bfd92577464576cc461a.yaml  issue-7aafe7fd0eedd658bdca9f0c972a51e1591102de.yaml  issue-a37e199b0003abdb666120bae268aa8c93d9f49c.yaml  issue-bcd8957866739c0b0ca42a82c4baff5764cb95cc.yaml  issue-c3e1943757b357e2b8bf2c59e8f3e8080285bcf9.yaml  issue-cc7e125b20c9c11f8e40167f46c4abf5f224039d.yaml  issue-e21565c7e409ca0f89a97290693b3f976349e348.yaml  project.yaml
lib/: Makefile.am  flourish.yg
lib/flourish/: char.yg  core.yg  ctrl.yg  pc.yg  stage.yg  transition.yg  view.yg
lib/flourish/char/: frozen_slime.yg  pc.yg  slime.yg  stone.yg
lib/flourish/core/: ctrl.yg  view.yg
lib/flourish/ctrl/: dead.yg  fadeout.yg  main.yg  nop.yg  title.yg
lib/flourish/geometry/: goal.yg  switch.yg
lib/flourish/stage/: attack_demo.yg  cave.yg  dead.yg  doc.yg  ending.yg  fadeout.yg  gameover.yg  large.yg  narrow.yg  reset.yg  simple.yg  stone_demo.yg  test_corner2_north_east.yg  test_corner2_north_west.yg  test_corner2_south_east.yg  test_corner2_south_west.yg  test_corner_north_east.yg  test_corner_north_west.yg  test_corner_south_east.yg  test_corner_south_west.yg  test_ending.yg  test_gameover.yg  test_stone.yg  test_switch.yg  title.yg  wall_drawing_bug.yg  wide.yg
lib/flourish/view/: dead.yg  ending.yg  fadeout.yg  gameover.yg  main.yg  nop.yg  title.yg
thumbnails/: Makefile  Makefile.in
tools/: dist  rec
