
resourcedir = $(pkgdatadir)
SUBDIRS = pc slime stone
resource_DATA = OpenBaskerville-0.0.53.otf ceil.png ceil_large.png \
		external.png floor.png goal-floor.png goal-pass.png \
		mouse_area.png switch-pressed.png switch-released.png wall.png \
		switch.wav

include $(top_srcdir)/Makefile.common

# vim: tabstop=8 shiftwidth=8 noexpandtab
