
resourcedir = $(pkgdatadir)/pc
resource_DATA = attack0.png attack1.png attack2.png attack3.png turn_left.png \
		turn_right.png walk0.png walk1.png walk2.png walk3.png \
		walk4.png walk5.png walk6.png walk7.png attack.wav die.wav

include $(top_srcdir)/Makefile.common

# vim: tabstop=8 shiftwidth=8 noexpandtab
