
resourcedir = $(pkgdatadir)/stone
resource_DATA = roll-horizontally0.png roll-horizontally1.png \
		roll-horizontally2.png roll-horizontally3.png \
		roll-horizontally4.png roll-vertically0.png \
		roll-vertically1.png roll-vertically2.png roll-vertically3.png \
		roll-vertically4.png

include $(top_srcdir)/Makefile.common

# vim: tabstop=8 shiftwidth=8 noexpandtab
